make sure lawbroken reports table cell isnt too big

--- a/client/src/core/client/admin/routes/Reports/ReportRowContainer.css
+++ b/client/src/core/client/admin/routes/Reports/ReportRowContainer.css
@@ -1,3 +1,8 @@
 .tableRow:hover {
   cursor: pointer;
 }
+
+.lawBrokenCell {
+  max-height: 100px;
+  overflow: hidden;
+}
